--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "prettier": "^1.19.1",
     "typescript": "~3.9.3"
   }
