--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "test": "nyc vue-cli-service test:unit 'tests/**/*.test.ts'",
     "test:watch": "vue-cli-service test:unit --watch 'tests/**/*.test.ts'",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "coveralls": "nyc report --reporter=text-lcov",
+    "report:html": "nyc report --reporter=html",
     "report:coverage": "nyc report",
     "lint": "vue-cli-service lint"
   },
