--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ before_script:
 
 script:
   - npm run lint
-  - npm run test
-  - npm run coveralls
+  - npm run test:ci
   - npm run build --prod
 
 deploy:
