--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "test": "nyc vue-cli-service test:unit 'tests/**/*.test.ts'",
     "test:watch": "vue-cli-service test:unit --watch 'tests/**/*.test.ts'",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "test:ci": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "report:html": "nyc report --reporter=html",
     "report:coverage": "nyc report",
     "lint": "vue-cli-service lint"
@@ -43,6 +43,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "istanbul": "^0.4.5",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "mocha-lcov-reporter": "^1.3.0",
