--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve --port 9110",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "test": "nyc vue-cli-service test:unit 'tests/**/*.test.ts'",
+    "test:watch": "vue-cli-service test:unit --watch 'tests/**/*.test.ts'",
+    "test:ci": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "report:html": "nyc report --reporter=html",
+    "report:coverage": "nyc report",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "coveralls": "^3.1.0",
+    "nyc": "^15.1.0",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.3.2",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
@@ -35,8 +43,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "istanbul": "^0.4.5",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "prettier": "^1.19.1",
     "typescript": "~3.9.3"
   }
