--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ before_script:
 
 script:
   - npm run lint
-  - npm run test:ci
+  - npm run test:unit
+  - npm run coveralls
   - npm run build --prod
 
 deploy:
