--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve --port 9110",
     "build": "vue-cli-service build",
-    "test": "nyc vue-cli-service test:unit 'tests/**/*.test.ts'",
-    "test:watch": "vue-cli-service test:unit --watch 'tests/**/*.test.ts'",
-    "test:ci": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
-    "report:html": "nyc report --reporter=html",
-    "report:coverage": "nyc report",
-    "lint": "vue-cli-service lint"
+    "test:unit": "vue-cli-service test:unit",
+    "test:unit:watch": "vue-cli-service test:unit --watch",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "lint": "vue-cli-service lint",
+    "test:watch": "vue-cli-service test:unit --watch 'tests/**/*.test.ts'"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "coveralls": "^3.1.0",
     "nyc": "^15.1.0",
     "primeicons": "^4.1.0",
     "primevue": "^3.3.2",
@@ -25,14 +23,14 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
-    "@types/mocha": "^5.2.4",
+    "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-mocha": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "^4.5.11",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
@@ -40,14 +38,15 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^2.0.0-0",
     "chai": "^4.1.2",
+    "coveralls": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "istanbul": "^0.4.5",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "mocha-lcov-reporter": "^1.3.0",
     "prettier": "^1.19.1",
-    "typescript": "~3.9.3"
+    "typescript": "~3.9.3",
+    "vue-jest": "^5.0.0-0"
   }
 }
