--- a/.travis.yml
+++ b/.travis.yml
@@ -18,14 +18,14 @@ script:
 
 before_deploy:
     - zip -r dist.zip dist
-    - git config --local user.name "YOUR GIT USER NAME"
-    - git config --local user.email "YOUR GIT USER EMAIL"
+    - git config --local user.name "$GITHUB_USER"
+    - git config --local user.email "$GITHUB_EMAIL"
     - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
     - git tag $TRAVIS_TAG
 
 deploy:
   provider: releases
-  api_key: "GITHUB OAUTH TOKEN"
+  api_key: $GITHUB_TOKEN
   file: "dist.zip"
   skip_cleanup: true
   on:
